--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ description: Baseline-powered ESLint plugin for safer web features
 theme: jekyll-theme-cayman
 # IMPORTANT for project pages:
 url: "https://sureshwizard.github.io"
-baseurl: "/futurefence"   # <= your repo name
+baseurl: "/featurefence"   # <= your repo name
 
 plugins: []
 markdown: kramdown
